--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
-body {
+html,
+body,
+#root {
   margin: 0;
-  padding: 1rem;
+  padding: 0;
+  height: 100%;
+  width: 100%;
 }
 
 .hand {
@@ -25,4 +29,14 @@ body {
 .digits {
   display: flex;
   flex-direction: row;
+}
+
+.container {
+  height: 100%;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
